cmake_minimum_required(VERSION 2.8.12)
project (Worms)

add_subdirectory(src)
add_subdirectory(Editor)
add_subdirectory(Escenario/GameWindow)

# we don't want to copy if we're building in the source dir
FILE(COPY "images/wormwait.png" DESTINATION "images")
FILE(COPY "images/airmisil.png" DESTINATION "images")
FILE(COPY "images/cluster.png" DESTINATION "images")
FILE(COPY "images/dynamite.png" DESTINATION "images")
FILE(COPY "images/granade.png" DESTINATION "images")
FILE(COPY "images/hgranade.png" DESTINATION "images")
FILE(COPY "images/mortar.png" DESTINATION "images")
FILE(COPY "images/banana.png" DESTINATION "images")
FILE(COPY "images/misil.png" DESTINATION "images")
FILE(COPY "images/hgrenade.1.png" DESTINATION "images")
FILE(COPY "images/airstrke.1.png" DESTINATION "images")
FILE(COPY "images/banana.1.png" DESTINATION "images")
FILE(COPY "images/baseball.1.png" DESTINATION "images")
FILE(COPY "images/bazooka.1.png" DESTINATION "images")
FILE(COPY "images/cluster.1.png" DESTINATION "images")
FILE(COPY "images/dynamite.1.png" DESTINATION "images")
FILE(COPY "images/firepnch.1.png" DESTINATION "images")
FILE(COPY "images/girder.1.png" DESTINATION "images")
FILE(COPY "images/grdl0.png" DESTINATION "images")
FILE(COPY "images/grdl4.png" DESTINATION "images")
FILE(COPY "images/grds0.png" DESTINATION "images")
FILE(COPY "images/grds4.png" DESTINATION "images")
FILE(COPY "images/grenade.1.png" DESTINATION "images")
FILE(COPY "images/intro2.jpg" DESTINATION "images")
FILE(COPY "images/missile.png" DESTINATION "images")
FILE(COPY "images/mortar.1.png" DESTINATION "images")
FILE(COPY "images/shothit.png" DESTINATION "images")
FILE(COPY "images/target.png" DESTINATION "images")
FILE(COPY "images/teleport.1.png" DESTINATION "images")
FILE(COPY "images/wairlnk.png" DESTINATION "images")
FILE(COPY "images/wairlnkd.png" DESTINATION "images")
FILE(COPY "images/wairlnku.png" DESTINATION "images")
FILE(COPY "images/wairtlk.png" DESTINATION "images")
FILE(COPY "images/wairtlkd.png" DESTINATION "images")
FILE(COPY "images/wairtlku.png" DESTINATION "images")
FILE(COPY "images/wbackflp.png" DESTINATION "images")
FILE(COPY "images/wbanlnk.png" DESTINATION "images")
FILE(COPY "images/wbazbak.png" DESTINATION "images")
FILE(COPY "images/wbazlnk.png" DESTINATION "images")
FILE(COPY "images/wblink1.png" DESTINATION "images")
FILE(COPY "images/wbndlnk.png" DESTINATION "images")
FILE(COPY "images/wbndlnkd.png" DESTINATION "images")
FILE(COPY "images/wbndlnku.png" DESTINATION "images")
FILE(COPY "images/wbsblnk.png" DESTINATION "images")
FILE(COPY "images/wbz2lnk.png" DESTINATION "images")
FILE(COPY "images/wbz2lnkd.png" DESTINATION "images")
FILE(COPY "images/wbz2lnku.png" DESTINATION "images")
FILE(COPY "images/wclslnk.png" DESTINATION "images")
FILE(COPY "images/wclslnkd.png" DESTINATION "images")
FILE(COPY "images/wclslnku.png" DESTINATION "images")
FILE(COPY "images/wdynlnk.png" DESTINATION "images")
FILE(COPY "images/wdynlnkd.png" DESTINATION "images")
FILE(COPY "images/wdynlnku.png" DESTINATION "images")
FILE(COPY "images/wfall.png" DESTINATION "images")
FILE(COPY "images/wfly.png" DESTINATION "images")
FILE(COPY "images/wfly.png" DESTINATION "images")
FILE(COPY "images/wgrnlnk.png" DESTINATION "images")
FILE(COPY "images/wgrnlnkd.png" DESTINATION "images")
FILE(COPY "images/wgrnlnku.png" DESTINATION "images")
FILE(COPY "images/whgrlnk.png" DESTINATION "images")
FILE(COPY "images/whgrlnkd.png" DESTINATION "images")
FILE(COPY "images/whgrlnku.png" DESTINATION "images")
FILE(COPY "images/wjump.png" DESTINATION "images")
FILE(COPY "images/wland1.png" DESTINATION "images")
FILE(COPY "images/wtellnk.png" DESTINATION "images")
FILE(COPY "images/wtellnkd.png" DESTINATION "images")
FILE(COPY "images/wtellnku.png" DESTINATION "images")
FILE(COPY "images/wwait.png" DESTINATION "images")
FILE(COPY "images/wwaitd.png" DESTINATION "images")
FILE(COPY "images/wwaitu.png" DESTINATION "images")
FILE(COPY "images/wwalk.png" DESTINATION "images")
FILE(COPY "images/wwalkd.png" DESTINATION "images")
FILE(COPY "images/wwalk_left.png" DESTINATION "images")
FILE(COPY "images/wwalk_right.png" DESTINATION "images")
FILE(COPY "images/wwalku.png" DESTINATION "images")
FILE(COPY "images/wwalku_l.png" DESTINATION "images")
FILE(COPY "images/wwalku_r.png" DESTINATION "images")
FILE(COPY "images/Bazooka.png" DESTINATION "images")
FILE(COPY "images/Mortar.png" DESTINATION "images")
FILE(COPY "images/W4_Grenade.png" DESTINATION "images")
FILE(COPY "images/Redgrenade.png" DESTINATION "images")
FILE(COPY "images/Bananabomb.png" DESTINATION "images")
FILE(COPY "images/Holy_Grenade.png" DESTINATION "images")
FILE(COPY "images/W4_Dynamite.png" DESTINATION "images")
FILE(COPY "images/Baseballbat.png" DESTINATION "images")
FILE(COPY "images/W4_Airstrike.png" DESTINATION "images")
FILE(COPY "images/IconTeleport.png" DESTINATION "images")
FILE(COPY "images/Win.jpeg" DESTINATION "images")
FILE(COPY "images/LoseScreen.gif" DESTINATION "images")
FILE(COPY "images/fondo.png" DESTINATION "images")

